--- a/public/style.css
+++ b/public/style.css
@@ -6,33 +6,64 @@
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --input-color: rgb(201, 199, 199);
     --btn-bg: rgb(131, 131, 246);
+    --body-bg: rgb(211, 228, 243);
+    --btn-hover-bg: rgb(84, 84, 231);
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(211, 228, 243);
+    background-color: var(--body-bg);
     height: 100vh;
     font-family: 'Roboto', sans-serif;
 }
 
+.hidden {
+    display: none;
+}
+
+#map {
+    height: 100vh;
+    width: 65%;
+}
+
+.container {
+    max-width: 1240px;
+    width: 100%;
+    margin: 40px auto;
+}
+
+.main-inner {
+    display: flex;
+    gap: 40px;
+    margin-bottom: 40px;
+}
+
 .location-form-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.location-form-wrapper form {
     width: 30%;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
 }
 
-.location-form-wrapper h2{
+.location-form-wrapper h2 {
     text-align: center;
     margin-bottom: 20px;
 }
 
-.location-form .location-form-block input{
+.location-form .location-form-block input {
     width: 100%;
     margin-bottom: 10px;
     border: 1px solid var(--input-color);
@@ -42,7 +73,7 @@ body {
     color: rgb(103, 102, 102);
 }
 
-.location-form .send-location-btn{
+.location-form .send-location-btn {
     width: 100%;
     margin: 10px 0 25px 0;
     padding: 8px 0;
@@ -56,19 +87,85 @@ body {
     transition: background-color .2s ease;
 }
 
-.location-form .send-location-btn:hover{
-    background-color: rgb(84, 84, 231);
+.location-form .send-location-btn:hover {
+    background-color: var(--btn-hover-bg);
 }
 
-.location-form p{
+.location-form p {
     color: rgb(87, 87, 87);
     font-size: 14px;
 }
 
-.location-form p button{
+.location-form p button {
     background-color: transparent;
     cursor: pointer;
     border: none;
     outline: none;
     color: var(--btn-bg);
+}
+
+.place-list {
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    background-color: white;
+    width: 30%;
+    border-radius: 10px;
+    padding: 10px 0;
+}
+
+.places-list-top {
+    padding: 15px 15px 20px 15px;
+    border-bottom: 3px solid var(--body-bg);
+}
+
+.places-list-top h2 {
+    margin-bottom: 10px;
+}
+
+.places-list-top .filter-btns {
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+}
+
+.places-list-top .filter-btns button {
+    padding: 5px 10px;
+    background-color: var(--btn-bg);
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    color: white;
+    transition: background-color .2s ease;
+    cursor: pointer;
+}
+
+.places-list-top .filter-btns button:hover {
+    background-color: var(--btn-hover-bg);
+}
+
+.place-list .place-item {
+    border-bottom: 3px solid var(--body-bg);
+    padding: 5px 15px 10px 15px;
+}
+
+.place-list .place-item h3 {
+    color: rgb(14, 14, 107);
+    margin-bottom: 5px;
+}
+
+.place-list .place-item .categoty {
+    color: var(--btn-bg);
+    margin-bottom: 8px;
+    font-weight: 500;
+}
+
+.place-list .place-item .location {
+    color: rgb(168, 166, 166);
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.place-list .place-item .distance {
+    font-size: 13px;
 }
