--- a/public/style.css
+++ b/public/style.css
@@ -34,6 +34,16 @@ body {
     margin: 40px auto;
 }
 
+.error-block{
+    text-align: center;
+    display: none;
+}
+
+.error-message{
+    font-size: 12px;
+    color: red;
+}
+
 .main-inner {
     display: flex;
     gap: 40px;
@@ -96,7 +106,7 @@ body {
     font-size: 14px;
 }
 
-.location-form p button {
+.location-form p a {
     background-color: transparent;
     cursor: pointer;
     border: none;
